--- a/lswl/src/component/Manage/shou.css
+++ b/lswl/src/component/Manage/shou.css
@@ -14,3 +14,62 @@
 	width: 100px;
 	color: #BBBBBB;
 }
+.list2{
+	height:39px;
+	width: 100%;
+	margin-top:15px;
+}
+.one{
+	border-width: 0px;
+    width: 127px;
+    height: 39px;
+    background: inherit;
+    background-color: rgba(255, 255, 255, 1);
+    border: none;
+    border-radius: 0px;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    font-size: 14px;
+    display: block;
+    float: left;
+    margin-right: 3px;
+    text-align: center;
+    line-height: 39px;
+}
+.bottom{
+	height: auto;
+	width: 100%;
+}
+.two{
+	width: 100%;
+	height: 60px;
+	background: #fff;
+	margin-top: 10px;
+}
+.ming{
+	display: block;
+	height: 25px;
+	padding:5px 5px 0 5px;
+}
+.lei{
+	font-size: 14px;
+	color: #333;
+	float: left;
+}
+.red{
+	font-size: 24px;
+	color: #ff0000;
+	float: right;
+}
+.xing{
+	float: left;
+	font-size: 14px;
+	color: #333;
+	margin-right: 200px;
+}
+.shi{
+	float: right;
+	font-size: 14px;
+	color: #999;
+}
